@@ -16,9 +16,10 @@
 
 package org.gradle.integtests.samples
 
+import org.gradle.api.JavaVersion
 import org.gradle.integtests.fixtures.AbstractIntegrationTest
 import org.gradle.integtests.fixtures.DefaultTestExecutionResult
-import org.gradle.integtests.fixtures.ForkScalaCompileInDaemonModeFixture
+import org.gradle.integtests.fixtures.ZincScalaCompileFixture
 import org.gradle.integtests.fixtures.Sample
 import org.gradle.integtests.fixtures.executer.GradleContextualExecuter
 import org.gradle.test.fixtures.file.TestFile
@@ -30,7 +31,7 @@ import static org.hamcrest.Matchers.containsString
 class SamplesMixedJavaAndScalaIntegrationTest extends AbstractIntegrationTest {
 
     @Rule public final Sample sample = new Sample(testDirectoryProvider, 'scala/mixedJavaAndScala')
-    @Rule public final ForkScalaCompileInDaemonModeFixture forkScalaCompileInDaemonModeFixture = new ForkScalaCompileInDaemonModeFixture(executer, testDirectoryProvider)
+    @Rule public final ZincScalaCompileFixture zincScalaCompileFixture = new ZincScalaCompileFixture(executer, testDirectoryProvider)
 
     @Test
     public void canBuildJar() {
@@ -41,17 +42,18 @@ class SamplesMixedJavaAndScalaIntegrationTest extends AbstractIntegrationTest {
 
         // Check tests have run
         def result = new DefaultTestExecutionResult(projectDir)
-        result.assertTestClassesExecuted('org.gradle.sample.PersonTest')
+        result.assertTestClassesExecuted('org.gradle.sample.PersonSpec')
 
         // Check contents of Jar
         TestFile jarContents = file('jar')
         projectDir.file("build/libs/mixedJavaAndScala-1.0.jar").unzipTo(jarContents)
         jarContents.assertHasDescendants(
-                'META-INF/MANIFEST.MF',
-                'org/gradle/sample/Person.class',
-                'org/gradle/sample/impl/JavaPerson.class',
-                'org/gradle/sample/impl/PersonImpl.class',
-                'org/gradle/sample/impl/PersonList.class'
+            'META-INF/MANIFEST.MF',
+            'org/gradle/sample/JavaPerson.class',
+            'org/gradle/sample/Named.class',
+            'org/gradle/sample/Person.class',
+            'org/gradle/sample/PersonList.class',
+            'org/gradle/sample/PersonList$.class'
         )
     }
 
@@ -60,6 +62,8 @@ class SamplesMixedJavaAndScalaIntegrationTest extends AbstractIntegrationTest {
         if (GradleContextualExecuter.isDaemon()) {
             // don't load scala into the daemon as it exhausts permgen
             return
+        } else if (!GradleContextualExecuter.isEmbedded() && !GradleContextualExecuter.isParallel() && !JavaVersion.current().isJava8Compatible()) {
+            executer.withBuildJvmOpts('-XX:MaxPermSize=128m')
         }
 
         TestFile projectDir = sample.dir
@@ -68,15 +72,15 @@ class SamplesMixedJavaAndScalaIntegrationTest extends AbstractIntegrationTest {
         TestFile javadocsDir = projectDir.file("build/docs/javadoc")
         javadocsDir.file("index.html").assertIsFile()
         javadocsDir.file("index.html").assertContents(containsString('mixedJavaAndScala 1.0 API'))
-        javadocsDir.file("org/gradle/sample/Person.html").assertIsFile()
-        javadocsDir.file("org/gradle/sample/impl/JavaPerson.html").assertIsFile()
+        javadocsDir.file("org/gradle/sample/JavaPerson.html").assertIsFile()
+        javadocsDir.file("org/gradle/sample/Named.html").assertIsFile()
 
         TestFile scaladocsDir = projectDir.file("build/docs/scaladoc")
         scaladocsDir.file("index.html").assertIsFile()
         scaladocsDir.file("index.html").assertContents(containsString('mixedJavaAndScala 1.0 API'))
-        scaladocsDir.file("org/gradle/sample/impl/PersonImpl.html").assertIsFile()
-        scaladocsDir.file("org/gradle/sample/impl/JavaPerson.html").assertIsFile()
-        scaladocsDir.file("org/gradle/sample/impl/PersonList.html").assertIsFile()
+        scaladocsDir.file("org/gradle/sample/JavaPerson.html").assertIsFile()
+        scaladocsDir.file("org/gradle/sample/Person.html").assertIsFile()
+        scaladocsDir.file('org/gradle/sample/PersonList$.html').assertIsFile()
     }
 
 }
